@@ -2,13 +2,13 @@
 # Usage: utils/fix-perms.sh
 # fixes the permissions of the files in the build tree
 #
-# To verify:   find . -type f -perm +111 -print
+# To verify:   find . -type f -perm /111
 
 root=${1:-.}
 
 echo "fixing permissions under [${root}]"
 
-find ${root} -type f -follow -perm +111 '(' \
+find ${root} -type f -follow -perm /111 '(' \
      -name '*.in' \
   -o -name '*.xml' \
   -o -name '*.xsl' \
@@ -24,10 +24,11 @@ find ${root} -type f -follow -perm +111 '(' \
   -o -name '*.tst' \
   -o -name '*.bat' \
   -o -name 'link.sh' \
-  -o -name '.cvsignore' \
+  -o -name '.hgignore' \
+  -o -name '.hgtags' \
   -o -name 'Makefile*' \
   -o -name 'README' \
   ')' \
   -exec chmod -c a-x '{}' ';'
 
-find ${root} -name configure -exec chmod -c +x '{}' ';'
+find ${root} -name configure -exec chmod -c u+x '{}' ';'
